src/Domain/Compiler/Instruction/Assembly/Aarch/Tests/ImmediateInstructionEncoding/NegatedValue/__Baselines__/ImmediateInstructionEncoding_NegatedValue_48-MachO-Aarch64.error
error: Value exceeds max limit of 'u64'.
--> main.hs:7:16
  | 
7 |         return 0b0000_0000_0000_0000_1111_1111_1111_1111___1111_1111_1111_1111_1111_1111_1111_1111;}}
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
